Fixed bug #71190 (substr_replace converts integers in original $search array to strings)